Adding audio manager

--- a/config/input.cfg
+++ b/config/input.cfg
@@ -30,7 +30,7 @@
 		},
 		{
 			"command": "duck",
-			"keys": [ "s" ]
+			"keys": [ "s" ] 
 		},
 		{
 			"command": "jump",
@@ -45,11 +45,11 @@
 			"keys": [ "." ]
 		},
 		{
-			"command": "fire",
-			"keys": [ "ENTER" ]
+			"command": "FIRE",
+			"keys": [ "f" ]
 		},
 
-		
+
 		{
 			"command": "case",
 			"keys": [ "'" ]
