--- a/win32/game/2D_DungeonCrawler/2D_DungeonCrawler.vcxproj.filters
+++ b/win32/game/2D_DungeonCrawler/2D_DungeonCrawler.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClInclude Include="player.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="audio_manager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\src\gf2d_draw.c">
@@ -99,6 +102,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="input_manager.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="player.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="audio_manager.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
