--- a/win32/game/2D_DungeonCrawler/2D_DungeonCrawler.vcxproj.filters
+++ b/win32/game/2D_DungeonCrawler/2D_DungeonCrawler.vcxproj.filters
@@ -72,7 +72,7 @@
     <ClInclude Include="player.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="audio_manager.h">
+    <ClInclude Include="..\..\..\include\audio_manager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
