Fixed up the controls to make it viable for a top down playing scenario; changed player sprite

--- a/config/input.cfg
+++ b/config/input.cfg
@@ -1,53 +1,60 @@
 {
-    "commands":
-    [
-        {
-            "command":"exit",
-            "keys":["F4"]
-        },
-        {
-            "command":"ok",
-            "keys":["RETURN"]
-        },
-        {
-            "command":"cancel",
-            "keys":["ESCAPE"]
-        },
-        {
-            "command":"yes",
-            "keys":["y"]
-        },
-        {
-            "command":"no",
-            "keys":["n"]
-        },
-        {
-            "command":"walkleft",
-            "keys":["a"]
-        },
-        {
-            "command":"walkright",
-            "keys":["d"]
-        },
-        {
-            "command":"duck",
-            "keys":["s"]
-        },
-        {
-            "command":"jump",
-            "keys":["/"]
-        },
-        {
-            "command":"shoot",
-            "keys":[";"]
-        },
-        {
-            "command":"melee",
-            "keys":["."]
-        },
-        {
-            "command":"case",
-            "keys":["'"]
-        }
-    ]
+	"commands": [
+		{
+			"command": "exit",
+			"keys": [ "ESCAPE" ]
+		},
+		{
+			"command": "ok",
+			"keys": [ "RETURN" ]
+		},
+		{
+			"command": "cancel",
+			"keys": [ "F4" ]
+		},
+		{
+			"command": "yes",
+			"keys": [ "y" ]
+		},
+		{
+			"command": "no",
+			"keys": [ "n" ]
+		},
+		{
+			"command": "walkleft",
+			"keys": [ "a" ]
+		},
+		{
+			"command": "walkright",
+			"keys": [ "d" ]
+		},
+		{
+			"command": "walkup",
+			"keys": [ "w" ]
+		},
+		{
+			"command": "walkdown",
+			"keys": [ "s" ]
+		},
+		{
+			"command": "duck",
+			"keys": [ "s" ]
+		},
+		{
+			"command": "jump",
+			"keys": [ "SPACE" ]
+		},
+		{
+			"command": "shoot",
+			"keys": [ "F" ]
+		},
+		{
+			"command": "melee",
+			"keys": [ "." ]
+		},
+		{
+			"command": "case",
+			"keys": [ "'" ]
+		}
+	]
 }
