--- a/WatchaBuyin.vcxproj
+++ b/WatchaBuyin.vcxproj
@@ -168,6 +168,7 @@
     <ClInclude Include="include\monster.h" />
     <ClInclude Include="include\pickup.h" />
     <ClInclude Include="include\player.h" />
+    <ClInclude Include="include\SDL_FontCache.h" />
     <ClInclude Include="include\simple_json.h" />
     <ClInclude Include="include\simple_json_array.h" />
     <ClInclude Include="include\simple_json_error.h" />
@@ -218,6 +219,7 @@
     <ClCompile Include="src\monster.c" />
     <ClCompile Include="src\pickup.c" />
     <ClCompile Include="src\player.c" />
+    <ClCompile Include="src\SDL_FontCache.c" />
     <ClCompile Include="src\simple_json.c" />
     <ClCompile Include="src\simple_json_array.c" />
     <ClCompile Include="src\simple_json_error.c" />
@@ -248,7 +250,6 @@
     <None Include="config\shop_window.json" />
     <None Include="config\testfile.json" />
     <None Include="config\testwindow.cfg" />
-    <None Include="config\testwindow.min" />
     <None Include="config\text_entry_window.json" />
     <None Include="config\yes_no_window.json" />
     <None Include="rooms\r1.json" />
