--- a/WatchaBuyin.vcxproj
+++ b/WatchaBuyin.vcxproj
@@ -134,9 +134,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="entity_bard.h" />
     <ClInclude Include="include\camera.h" />
     <ClInclude Include="include\editor.h" />
+    <ClInclude Include="include\entity_bard.h" />
     <ClInclude Include="include\entity_common.h" />
     <ClInclude Include="include\gf2d_actor.h" />
     <ClInclude Include="include\gf2d_audio.h" />
@@ -168,6 +168,7 @@
     <ClInclude Include="include\monster.h" />
     <ClInclude Include="include\pickup.h" />
     <ClInclude Include="include\player.h" />
+    <ClInclude Include="include\projectile.h" />
     <ClInclude Include="include\SDL_FontCache.h" />
     <ClInclude Include="include\simple_json.h" />
     <ClInclude Include="include\simple_json_array.h" />
@@ -181,13 +182,11 @@
     <ClInclude Include="include\spawn.h" />
     <ClInclude Include="include\UI.h" />
     <ClInclude Include="include\windows_common.h" />
-    <ClInclude Include="projectile.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="entity_bard.c" />
-    <ClCompile Include="projectile.c" />
     <ClCompile Include="src\camera.c" />
     <ClCompile Include="src\editor.c" />
+    <ClCompile Include="src\entity_bard.c" />
     <ClCompile Include="src\entity_common.c" />
     <ClCompile Include="src\game.c" />
     <ClCompile Include="src\gf2d_actor.c" />
@@ -219,6 +218,7 @@
     <ClCompile Include="src\monster.c" />
     <ClCompile Include="src\pickup.c" />
     <ClCompile Include="src\player.c" />
+    <ClCompile Include="src\projectile.c" />
     <ClCompile Include="src\SDL_FontCache.c" />
     <ClCompile Include="src\simple_json.c" />
     <ClCompile Include="src\simple_json_array.c" />
