--- a/WatchaBuyin.vcxproj.filters
+++ b/WatchaBuyin.vcxproj.filters
@@ -150,19 +150,19 @@
     <ClInclude Include="include\simple_json_value.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="entity_bard.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="include\level_graph.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="projectile.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\UI.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\SDL_FontCache.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\entity_bard.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\projectile.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -293,19 +293,19 @@
     <ClCompile Include="src\simple_json_string.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="entity_bard.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\level_graph.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="projectile.c">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\UI.c">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\SDL_FontCache.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\entity_bard.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\projectile.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
