Added a bat. it moves. but not well.

--- a/WatchaBuyin.vcxproj
+++ b/WatchaBuyin.vcxproj
@@ -134,6 +134,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="include\bat.h" />
     <ClInclude Include="include\camera.h" />
     <ClInclude Include="include\editor.h" />
     <ClInclude Include="include\entity_bard.h" />
@@ -180,6 +181,7 @@
     <ClInclude Include="include\simple_json_value.h" />
     <ClInclude Include="include\simple_logger.h" />
     <ClInclude Include="include\spawn.h" />
+    <ClInclude Include="include\sprite_editor.h" />
     <ClInclude Include="include\UI.h" />
     <ClInclude Include="include\windows_common.h" />
   </ItemGroup>
@@ -230,6 +232,7 @@
     <ClCompile Include="src\simple_json_string.c" />
     <ClCompile Include="src\simple_logger.c" />
     <ClCompile Include="src\spawn.c" />
+    <ClCompile Include="src\sprite_editor.c" />
     <ClCompile Include="src\UI.c" />
     <ClCompile Include="src\windows_common.c" />
   </ItemGroup>
