--- a/WatchaBuyin.vcxproj.filters
+++ b/WatchaBuyin.vcxproj.filters
@@ -165,6 +165,12 @@
     <ClInclude Include="include\projectile.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\bat.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\sprite_editor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\camera.c">
@@ -309,6 +315,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\bat.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\sprite_editor.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
