--- a/WatchaBuyin.vcxproj
+++ b/WatchaBuyin.vcxproj
@@ -170,6 +170,7 @@
     <ClInclude Include="include\pickup.h" />
     <ClInclude Include="include\player.h" />
     <ClInclude Include="include\projectile.h" />
+    <ClInclude Include="include\save_data.h" />
     <ClInclude Include="include\SDL_FontCache.h" />
     <ClInclude Include="include\simple_json.h" />
     <ClInclude Include="include\simple_json_array.h" />
@@ -221,6 +222,7 @@
     <ClCompile Include="src\pickup.c" />
     <ClCompile Include="src\player.c" />
     <ClCompile Include="src\projectile.c" />
+    <ClCompile Include="src\save_data.c" />
     <ClCompile Include="src\SDL_FontCache.c" />
     <ClCompile Include="src\simple_json.c" />
     <ClCompile Include="src\simple_json_array.c" />
